add see discussion button

--- a/B2D_Ventures/templates/details.html
+++ b/B2D_Ventures/templates/details.html
@@ -61,9 +61,11 @@
         <p class="heading-font">
             $565,372 Invested
         </p>
-        <button class="generic-button">Start Investment</button>
+        <button class="generic-button" style="margin-right: inline-block">Start Investment</button>
+        <button class="generic-button">See Discussion</button>
     </div>
     <hr>
+
     <div class="details-container">
         <p class="heading-font">About</p>
         <p class="content-font">
@@ -101,7 +103,6 @@
             </p>
         </div>
     </div>
-
 
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
