--- a/B2D_Ventures/templates/index.html
+++ b/B2D_Ventures/templates/index.html
@@ -62,6 +62,21 @@
                 src="https://p.bigstockphoto.com/GeFvQkBbSLaMdpKXF1Zv_bigstock-Aerial-View-Of-Blue-Lakes-And--227291596.jpg"
             >
             <p class="heading-font">
+                Very long text aaaaaaaaaaaaaaaaaaa
+            </p>
+            <p class="content-font">
+                costantan
+            </p>
+            <div class="progress-bar">
+                <div class="progress" style="width: 75%;"></div>
+            </div><br>
+            <button class="generic-button" type="submit">View Details</button>
+        </div>
+        <div class="card-subcontainer">
+            <img class="card-img" alt="Test image"
+                src="https://p.bigstockphoto.com/GeFvQkBbSLaMdpKXF1Zv_bigstock-Aerial-View-Of-Blue-Lakes-And--227291596.jpg"
+            >
+            <p class="heading-font">
                 ?
             </p>
             <p class="content-font">
