--- a/B2D_Ventures/templates/index.html
+++ b/B2D_Ventures/templates/index.html
@@ -24,22 +24,20 @@
                 src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3f/Fronalpstock_big.jpg/2560px-Fronalpstock_big.jpg"
             >
             <p class="heading-font">
-                Very long text aaaaaaaaaaaaaaaaaaa
+                MountainSaver
             </p>
             <p class="content-font">
-                Shikanoko nokonoko koshitantan<br>
-                Shikanoko nokonoko koshitantan<br>
-                Shikanoko nokonoko koshitantan<br>
-                Shikanoko nokonoko koshitantan<br>
-
-                Shikanoko nokonoko koshitantan<br>
-                Shikanoko nokonoko koshitantan<br>
-                Shikanoko nokonoko koshitantan<br>
-                Shikanoko nokonoko koshitantan<br>
+                MountainSaver is an eco-friendly startup dedicated to preserving mountainous regions 
+                through sustainable practices and innovative conservation technologies.
+                Our mission is to protect natural habitats while promoting eco-tourism and outdoor activities
             </p>
+            Progress: 50% Completed
             <div class="progress-bar">
                 <div class="progress" style="width: 50%;"></div>
             </div><br>
+            Current Funds: 50,000$<br><br>
+            Mininum Funds: 350$<br><br>
+            75 days left to invest<br><br>
             <button class="generic-button" type="submit">View Details</button>
         </div>
         <div class="card-subcontainer">
@@ -47,44 +45,63 @@
                 src="https://p.bigstockphoto.com/GeFvQkBbSLaMdpKXF1Zv_bigstock-Aerial-View-Of-Blue-Lakes-And--227291596.jpg"
             >
             <p class="heading-font">
-                Very long text aaaaaaaaaaaaaaaaaaa
+                Forest Friend
             </p>
             <p class="content-font">
-                costantan
+                Forest Friend is a green tech company focused on reforestation and forest management.
+                We offer solutions to restore and protect forest ecosystems, combat deforestation, 
+                and support biodiversity through cutting-edge technology and community engagement.
             </p>
+            Progress: 75% Completed
             <div class="progress-bar">
                 <div class="progress" style="width: 75%;"></div>
             </div><br>
+            Current Funds: 50,000$<br><br>
+            Mininum Funds: 50$<br><br>
+            35 days left to invest<br><br>
             <button class="generic-button" type="submit">View Details</button>
         </div>
         <div class="card-subcontainer">
             <img class="card-img" alt="Test image"
-                src="https://p.bigstockphoto.com/GeFvQkBbSLaMdpKXF1Zv_bigstock-Aerial-View-Of-Blue-Lakes-And--227291596.jpg"
+                src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSCz-iXcXGiRIoQ9VEkHsT-w1AuyMZ3XKXOpw&s"
             >
             <p class="heading-font">
-                Very long text aaaaaaaaaaaaaaaaaaa
+                Pharmasi Inc.
             </p>
             <p class="content-font">
-                costantan
+                Pharmasi Inc. is a forward-thinking pharmaceutical company committed to 
+                developing next-generation medicines and healthcare solutions. 
+                Our focus is on delivering high-quality, innovative therapies 
+                that improve patient outcomes and advance the field of medicine.
             </p>
+            Progress: 75% Completed
             <div class="progress-bar">
                 <div class="progress" style="width: 75%;"></div>
             </div><br>
+            Current Funds: 50,000$<br><br>
+            Mininum Funds: 500$<br><br>
+            7 days left to invest<br><br>
             <button class="generic-button" type="submit">View Details</button>
         </div>
         <div class="card-subcontainer">
             <img class="card-img" alt="Test image"
-                src="https://p.bigstockphoto.com/GeFvQkBbSLaMdpKXF1Zv_bigstock-Aerial-View-Of-Blue-Lakes-And--227291596.jpg"
+                src="https://media.istockphoto.com/id/1369489882/photo/variety-of-vegan-plant-based-protein-food.jpg?s=612x612&w=0&k=20&c=nKvZEd0raRryOpsGhwB9iOCEIizrDqB3XeFvRLdJOyI="
             >
             <p class="heading-font">
-                ?
+                Go Vegan!
             </p>
             <p class="content-font">
-                costantana
+                Go Vegan! is a lifestyle brand dedicated to promoting plant-based living.
+                We provide delicious vegan food options, sustainable products, and educational resources 
+                to support a healthier, cruelty-free lifestyle for individuals and communities.
             </p>
+            Progress: 25% Completed
             <div class="progress-bar">
                 <div class="progress" style="width: 25%;"></div>
             </div><br>
+            Current Funds: 50,000$<br><br>
+            Mininum Funds: 50$<br><br>
+            Ended<br><br>
             <button class="generic-button" type="submit">View Details</button>
         </div>
     </div>
