--- a/B2D_Ventures/static/css/navbar.css
+++ b/B2D_Ventures/static/css/navbar.css
@@ -6,18 +6,13 @@
     background-color: #333;
 }
 
-.navbar-app-name {
-    float: left;
-    font-weight: bold;
-    font-size: 36px;
-}
-
 .navbar-item-left {
     float: left;
 }
 
 .navbar-link {
     display: block;
+    height: 50px;
     border: none;
     background-color: #333;
     padding: 14px 16px;
@@ -35,9 +30,11 @@
     float: right;
 }
 
-.navbar-username {
-    float: right;
-    text-align: center;
+#profile-img {
+    border: none;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
 }
 
 #search-container {
