--- a/B2D_Ventures/templates/details.html
+++ b/B2D_Ventures/templates/details.html
@@ -74,9 +74,9 @@
     <hr>
     #TODO wil be changed to navbar<br>
     {% comment %}
-    #TODO make sticky<br>
+    #TODO make sticky
     {% endcomment %}
-    <button class="generic-button" onclick="toggleDetails()">See Details</button>
+    <button class="generic-button" onclick="toggleDetails()" style="margin-right: 5px;">See Details</button>
     <button class="generic-button" onclick="toggleDiscussion()">See Discussion</button>
     <hr>
 
@@ -130,19 +130,25 @@
         </div>
     </div>
 
-    <div id="discussion-section" style="display: none;">
-        {%comment%} #TODO requires authentication {% endcomment%} 
-        {% if user.is_authenticated %}
-            <textarea placeholder="Write your discussion..."></textarea><br><br>
-            <button class="generic-button" onclick="postDicussion()">Post Discussion</button>
-        {% else %}
-            Please login to join discussion
-        {% endif %}
-        <h1>User1</h1>
-        <li>I think this start-up is very cool!</li>
-
-        <h1>User2</h1>
-        <li>This is one of the start-up of all times!</li>
+    <div class="details-container">
+        <div id="discussion-section" style="display: none;">
+            <p class="heading-font" style="padding:20px; padding-left:0px; margin:0px;">Discussion</p>
+            {%comment%} #TODO requires authentication {% endcomment%} 
+            {% if user.is_authenticated %}
+                <textarea class="discussion-box" placeholder="Write your discussion..."></textarea><br><br>
+                <button class="generic-button" onclick="postDicussion()">Post Discussion</button>
+            {% else %}
+                Please login to join discussion
+            {% endif %}
+            <div class="container" style="margin-top:20px; margin-bottom:20px;">
+                <h1>User1</h1>
+                <li>I think this start-up is very cool!</li>
+            </div>
+            <div class="container" style="margin-top:20px; margin-bottom:20px;">
+                <h1>User2</h1>
+                <li>This is one of the start-up of all times!</li>
+            </div>
+        </div>
     </div>
 
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
