--- a/B2D_Ventures/static/css/details.css
+++ b/B2D_Ventures/static/css/details.css
@@ -56,8 +56,10 @@
 }
 
 .discussion-box {
-    font-size: 20px;
     width: 600px;
     height: 300px;
     resize: none;
+
+    font-family: 'Urbanist', sans-serif;
+    font-size: 20px;
 }
