--- a/B2D_Ventures/static/css/base.css
+++ b/B2D_Ventures/static/css/base.css
@@ -66,6 +66,9 @@ button {
     border-radius: 12px;
     width: 400px;
     height: 300px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 /* Fonts */
