--- a/B2D_Ventures/templates/login.html
+++ b/B2D_Ventures/templates/login.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load socialaccount %}
 {% load static %}
 
 {% comment %} {% block css_link %}
@@ -21,6 +22,10 @@
         <button class="generic-button" type="submit">Register</button>
     </form>
 
+    <div>
+        <a href="{% provider_login_url 'google' %}" class="login-with-google-btn">Sign in with Google</a>
+    </div>
+
     {% if messages %}
         <ul class="messages">
             {% for message in messages %}
@@ -29,3 +34,4 @@
         </ul>
     {% endif %}
 {% endblock %}
+
