--- a/B2D_Ventures/static/css/base.css
+++ b/B2D_Ventures/static/css/base.css
@@ -15,6 +15,7 @@ button {
     font-family: 'Urbanist', sans-serif;
 }
 
+/* Box */
 .container {
     border: 1px solid #999999;
     border-radius: 12px;
@@ -22,6 +23,7 @@ button {
     padding: 16px 24px;
 }
 
+/* Buttons */
 .generic-button {
     background: #703BF7;
     border: none;
