--- a/B2D_Ventures/templates/login.html
+++ b/B2D_Ventures/templates/login.html
@@ -2,9 +2,10 @@
 {% load socialaccount %}
 {% load static %}
 
-{% comment %} {% block css_link %}
+{% block css_link %}
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
-{% endblock %} {% endcomment %}
+    <link rel="stylesheet" href="{% static 'css/authentication.css' %}">
+{% endblock %}
 
 {% block title %}Login{% endblock %}
 
@@ -12,7 +13,14 @@
     <h2>Login</h2>
     <form method="post">
         {% csrf_token %}
-        {{ form.as_p }}
+        <div class="auth-form">
+            Username<br>
+            {{ form.username }}
+            <br><br>
+            Password<br>
+            {{ form.password }}
+        </div>
+        <br>
         <button class="generic-button" type="submit">Login</button>
     </form>
 
@@ -22,9 +30,9 @@
         <button class="generic-button" type="submit">Register</button>
     </form>
 
-    <div>
-        <a href="{% provider_login_url 'google' %}" class="login-with-google-btn">Sign in with Google</a>
-    </div>
+    <form action="{% provider_login_url 'google' %}">
+        <button id="login-with-google-btn" type="submit">Sign in with Google</button>
+    </form>
 
     {% if messages %}
         <ul class="messages">
