--- a/B2D_Ventures/static/css/authentication.css
+++ b/B2D_Ventures/static/css/authentication.css
@@ -26,7 +26,7 @@
     padding: 16px 24px;
 
     font-family: 'Urbanist', sans-serif;
-    font-size: 18px;
+    font-size: 20px;
     color: white;
 }
 
@@ -39,4 +39,29 @@
     -webkit-text-fill-color: white;
     transition: background-color 5000s ease-in-out 0s;
     box-shadow: inset 0 0 20px 20px #23232329;
+}
+
+.auth-div {
+    position: absolute;
+    top: 50%;
+    left: 75%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+}
+
+.error {
+    color: red;
+    font-size: 16px;
+    margin-top: 5px;
+}
+
+.auth-picture {
+    position: absolute;
+    top: 50%;
+    left: 25%;
+    transform: translate(-50%, -50%);
+    width: 50%;
+    height: 70%;
+    margin-left: 80px;
+    border-radius: 12px;
 }
