--- a/B2D_Ventures/static/css/base.css
+++ b/B2D_Ventures/static/css/base.css
@@ -66,12 +66,7 @@ button {
 
 .card-img {
     border-radius: 12px;
-    width: 400px;
-    height: 300px;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 100%;
+    width: 100%;
     height: auto;
 }
 
