--- a/B2D_Ventures/templates/login.html
+++ b/B2D_Ventures/templates/login.html
@@ -12,28 +12,28 @@
 {% block content %}
     <img class="auth-picture" src="https://images.tokopedia.net/blog-tokopedia-com/uploads/2019/09/investasi-aman.jpg"></img>
     <div class="auth-div">
+        <p class="heading-font" style="text-align: center;">B2D Ventures</p>
+        Start your journey towards smart investments today.
         <p class="heading-font">Login</p>
-        <form method="post">
-            {% csrf_token %}
-            <div class="auth-form">
-                <p class="topic-font">Username</p>
+        <div class="auth-form">
+            <form method="post" style="text-align: center;">
+                {% csrf_token %}
+                <p class="topic-font" style="text-align: left;">Username</p>
                 {{ form.username }}
-                <br><br>
-                <p class="topic-font">Password</p>
+                <p class="topic-font" style="text-align: left;">Password</p>
                 {{ form.password }}
-            </div>
-            <br>
-            <button class="generic-button" type="submit">Login</button>
-        </form>
+                <br><br>
+                <button class="generic-button" type="submit" style="width: 50%;">Login</button>
+            </form>
+        </div>
 
-        Doesn't have account? Register here.
-        <br><br>
-        <form action="{% url 'register' %}" method="post">
+        <p>Doesn't have account? Register here.</p>
+        <form action="{% url 'register' %}" method="post" style="text-align: center;">
             {% csrf_token %}
-            <button class="generic-button" type="submit">Register</button>
+            <button class="generic-button" type="submit" style="width: 50%;">Register</button>
         </form>
 
-        <form action="{% provider_login_url 'google' %}">
+        <form action="{% provider_login_url 'google' %}" style="text-align: center;">
             <button id="login-with-google-btn" type="submit">Sign in with Google</button>
         </form>
 
