--- a/B2D_Ventures/templates/navbar.html
+++ b/B2D_Ventures/templates/navbar.html
@@ -14,7 +14,7 @@
         {% if user.is_authenticated %}
             {% comment %} Note: float: right is put in reverse order {% endcomment %}
             <li class="navbar-item-right">
-                <a class="navbar-link" href="" style="padding:2px; margin:10px;">
+                <a class="navbar-link" href="{% url 'profile' %}" style="padding:2px; margin:10px;">
                     <img id="profile-img" alt="Profile Picture" src="https://64.media.tumblr.com/cff5524eaed3a69e6187d4a8a7bd8417/3eea390ca2b57633-e8/s640x960/e597246a66f8169f886d2807c9d30eac3af2814c.jpg">
                 </a>
             </li>
