--- a/B2D_Ventures/templates/register.html
+++ b/B2D_Ventures/templates/register.html
@@ -10,35 +10,37 @@
 {% block title %}Register Account{% endblock %}
 
 {% block content %}
-    <img class="auth-picture" src="https://images.tokopedia.net/blog-tokopedia-com/uploads/2019/09/investasi-aman.jpg"></img>
+<div class="auth-container">
+    <div class="auth-picture">
+        <img src="https://images.tokopedia.net/blog-tokopedia-com/uploads/2019/09/investasi-aman.jpg"></img>
+    </div>
     <div class="auth-div">
-        <p class="heading-font" style="text-align: center;">B2D Ventures</p>
+        <p class="heading-font">B2D Ventures</p>
         Start your journey towards smart investments today.
         <p class="heading-font">Register</p>
         <div class="auth-form">
-            <form method="post" style="text-align: center;">
+            <form method="post">
                 {% csrf_token %}
-                <p class="topic-font" style="text-align: left;">Username</p>
+                <p class="topic-font">Username</p>
                 {{ form.username }}
-                <p class="topic-font" style="text-align: left;">Password</p>
+                <p class="topic-font">Password</p>
                 {{ form.password1 }}
-                <p class="topic-font" style="text-align: left;">Confirm Password</p>
+                <p class="topic-font">Confirm Password</p>
                 {{ form.password2 }}
-                <p class="topic-font" style="text-align: left;">Email</p>
+                <p class="topic-font">Email</p>
                 {{ form.email }}
                 <br><br>
-                <button class="generic-button" type="submit" style="width: 50%;">Register</button>
+                <button class="generic-button" type="submit">Register</button>
             </form>
         </div>
 
-
         <p>Already have account? Login here.</p>
-        <form action="{% url 'login' %}" method="post" style="text-align: center;">
+        <form action="{% url 'login' %}" method="post">
             {% csrf_token %}
-            <button class="generic-button" type="submit" style="width: 50%;">Login</button>
+            <button class="generic-button" type="submit">Login</button>
         </form>
 
-        <form action="{% provider_login_url 'google' %}" style="text-align: center;">
+        <form action="{% provider_login_url 'google' %}">
             <button id="login-with-google-btn" type="submit">Sign in with Google</button>
         </form>
 
@@ -47,4 +49,6 @@
             {{ form.non_field_errors }}
         </div>
     {% endif %}
+    </div>
+</div>
 {% endblock %}
