add css for profile page

--- a/B2D_Ventures/templates/login.html
+++ b/B2D_Ventures/templates/login.html
@@ -9,6 +9,7 @@
 
 {% block title %}Login{% endblock %}
 
+#TODO add border round to img
 {% block content %}
 <div class="auth-container">
     <div class="auth-picture">
